--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,6 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,eclipse
+
+# macOS
+.DS_Store
